add CodeGenerator #log