@@ -30,5 +30,5 @@ if [ "$NATIVE" = "true" ]; then
   $PRGDIR/my-toolbox -Dwebroot.dir=$PRGDIR/webroot "$@"
 else
 	echo "Start toolbox.jar"
-  java -jar $PRGDIR/lib/my-toolbox-fat.jar "$@"
+  java --enable-preview -jar $PRGDIR/lib/my-toolbox-fat.jar "$@"
 fi
